Change log
==========

1.6 (unreleased)
----------------


1.5 (2010-07-31)
----------------
- Feature: If you generate some documentation via 
  `z3c.recipe.sphinxdoc` and want to stitch links to it 
  into the generated index file, you can use the new 
  ``z3csphinx-output-directory`` parameter to point the script 
  to the generated package documentation root folder.


1.4 (2010-07-31)
----------------
- Bug: Don't clean up intermediate files, otherwise it is not 
  possible to re-use a template folder for creating several
  separate pages into an output folder.

- Bug: Clean up group header creation to avoid header level
  mixups.

- Bug: When creating a missing required index.rst, use a 
  template file if it exists.


1.3 (2010-07-30)
----------------
- Feature: Added a script and buildout option ``index-name`` to 
  specify the file name (without extension) for the index page.
  With this option you can safely build the index page into an 
  existing `Sphinx` documentation folder without overwriting 
  or changing the existing ``index.rst`` file and its HTML 
  equivalent. The default continues to be ``index.rst``, though.

- Feature removed: It is no longer possible to create a simple HTML
  index page without using `Sphinx` and a minimal `Sphinx` 
  configuration.


1.2 (2010-07-29)
----------------
- Feature: Add new script option ``-g``/``--grouping`` and zc.buildout 
  option ``grouping`` to group packages.

- Miscellaneous: Renamed the zc.buildout option `source` to `sources`
  since it contains one or more elements.

- Miscellaneous: Removed the version pinning on the Sphinx dependency 
  since our other dependency (repoze.sphinx.autointerface) is now 
  compatible with Sphinx 1.0.

- Bug: If pkg_resources.find_distributions cannot find valid
  Egg distributions we still force the tag folder itself into the 
  pkg_resources.working_set as a fallback.


1.1 (2010-07-25)
----------------
- Feature: The user can now provide a Sphinx configuration folder 